.provarCaches/00D410000011HE0EAM/objects/rstk__sylocnum__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sylocnum</customHelpPage>
    <description>sylocnum__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sylocnum_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; rstk__sylocnum_locid__r.rstk__sylocid_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp; rstk__sylocnum_locid__r.rstk__sylocid_locid__c &amp; &apos;_&apos; &amp; rstk__sylocnum_locnum__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sylocnum_altuomumcf__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Alternative Multiplier Factor</inlineHelpText>
        <label>Alt Multiplier Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylocnum_descr__c</fullName>
        <inlineHelpText>Description of the Stock Location Number.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sylocnum_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sylocnums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sylocnum_locid__c</fullName>
        <inlineHelpText>Inventory Location ID</inlineHelpText>
        <label>Inventory Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inventory Location Numbers</relationshipLabel>
        <relationshipName>sylocnums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sylocnum_locnum__c</fullName>
        <inlineHelpText>A user-defined value to uniquely identify this record.</inlineHelpText>
        <label>Inventory Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sylocnum_pickseq__c</fullName>
        <inlineHelpText>User-defined sequential number used to sequence the order in which items are picked for WOs and SOs. WO Picklists and SO Picklists can be created to be sequenced using these values.</inlineHelpText>
        <label>Pick Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inventory Location Number</label>
    <listViews>
        <fullName>MS_Stock_Loc_Number</fullName>
        <columns>rstk__formula_extid__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__sylocnum_div__c</columns>
        <columns>rstk__sylocnum_descr__c</columns>
        <columns>rstk__sylocnum_locid__c</columns>
        <columns>rstk__sylocnum_locnum__c</columns>
        <columns>rstk__sylocnum_pickseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>MS_Stock Loc Number</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stock_Loc_Number_AC</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylocnum_div__c</columns>
        <columns>rstk__sylocnum_descr__c</columns>
        <columns>rstk__sylocnum_locid__c</columns>
        <columns>rstk__sylocnum_locnum__c</columns>
        <columns>rstk__sylocnum_pickseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sylocnum_locid__c</field>
            <operation>contains</operation>
            <value>STK1</value>
        </filters>
        <filters>
            <field>rstk__sylocnum_div__c</field>
            <operation>contains</operation>
            <value>Colorado</value>
        </filters>
        <label>Stock Loc Number-AC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stock_Loc_Number_DJ</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylocnum_div__c</columns>
        <columns>rstk__sylocnum_descr__c</columns>
        <columns>rstk__sylocnum_locid__c</columns>
        <columns>rstk__sylocnum_locnum__c</columns>
        <columns>rstk__sylocnum_pickseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sylocnum_div__c</field>
            <operation>contains</operation>
            <value>Deepak</value>
        </filters>
        <label>Stock Loc Number-DJ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Stock_Loc_Number</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylocnum_div__c</columns>
        <columns>rstk__sylocnum_descr__c</columns>
        <columns>rstk__sylocnum_locid__c</columns>
        <columns>rstk__sylocnum_locnum__c</columns>
        <columns>rstk__sylocnum_pickseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sylocnum_locid__c</field>
            <operation>contains</operation>
            <value>Main (Main</value>
        </filters>
        <label>Stock Loc Number</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Stock_Loc_Number_BOC</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylocnum_div__c</columns>
        <columns>rstk__sylocnum_descr__c</columns>
        <columns>rstk__sylocnum_locid__c</columns>
        <columns>rstk__sylocnum_locnum__c</columns>
        <columns>rstk__sylocnum_pickseq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sylocnum_div__c</field>
            <operation>contains</operation>
            <value>TMM</value>
        </filters>
        <label>Stock Loc Number-BOC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Location Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Alt_Multiplier_Factor_Range</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__sylocnum_altuomumcf__c) || rstk__sylocnum_altuomumcf__c &lt; 1</errorConditionFormula>
        <errorMessage>Alt Multiplier Factor must be a positive number greater or equal to 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Pickseq_Range</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__sylocnum_pickseq__c &lt; 0</errorConditionFormula>
        <errorMessage>Pick Sequence cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>